--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,7 @@
 :global(:root) {
   --background-color-primary: #ffffff;
   --background-color-secondary: #FFFFFF;
-  --accent-color: #000000;
+  --accent-color: #b3b3b3;
   --text-primary-color: #000000;
   --element-size: 4rem;
   --el-hover: #464646;
