--- a/src/components/FWFilters/style.module.scss
+++ b/src/components/FWFilters/style.module.scss
@@ -1,7 +1,15 @@
-.filterList{
+@import '@/assets/index.scss';
+
+.filterList {
     display: flex;
     flex-direction: column;
     gap: 5px;
-    padding: 10px;
+    padding: 10px 0;
     align-items: center;
+}
+
+@include Tabel() {
+    .filterList {
+        flex-direction: row;
+    }
 }
