--- a/src/components/FWHeader/style.module.scss
+++ b/src/components/FWHeader/style.module.scss
@@ -1,6 +1,9 @@
 header {
+    padding: 10px 0;
+}
+
+.container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
 }
