--- a/src/components/FWPictureList/style.module.scss
+++ b/src/components/FWPictureList/style.module.scss
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 10px;
+    padding: 10px 0;
     align-items: center;
 }
