--- a/src/components/ui/BaseCardPicture/style.module.scss
+++ b/src/components/ui/BaseCardPicture/style.module.scss
@@ -1,10 +1,19 @@
 .cardPicture {
-    width: 360px;
-    height: 275px;
+    width: 100%;
     background-color: #777777;
     position: relative;
     border-radius: 25px;
     overflow: hidden;
+    padding-top: 73.25%;
+
+    .picture {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
     .pictureInfo {
         background-color: rgba(255, 255, 255, 0.75);
@@ -13,22 +22,39 @@
         right: 0;
         bottom: 0;
         padding: 7px 15px 10px;
-        
-        .infoName{
+        transform: translateY(60px);
+        transition: all .15s ease-out;
+
+        .infoName {
             font-size: 18px;
             font-weight: 700;
             line-height: 20px;
-            color:#000000;
+            color: #000000;
         }
-        .infoText{
+
+        .infoText {
             font-size: 13px;
             font-weight: 300;
             line-height: 20px;
-            color:#000000;
-            .infoTitle{
+            color: #000000;
+            transition: all .15s ease-out;
+            opacity: 0;
+
+            .infoTitle {
                 font-weight: 600;
 
             }
+
+
         }
+    }
+
+    &:hover .pictureInfo {
+        transform: translateY(0px);
+
+    }
+
+    &:hover .infoText {
+        opacity: 1;
     }
 }
