--- a/src/components/ui/BaseInput/style.module.scss
+++ b/src/components/ui/BaseInput/style.module.scss
@@ -1,7 +1,7 @@
-.filterWrap {
+.inputWrap {
     width: 100%;
 
-    .filter {
+    .input {
         padding: 10px;
         border: 1px solid var(--accent-color);
         border-radius: 7px;
