--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -1,4 +1,4 @@
 @font-face {
-    font-family: "RobotoRegular";
-    src: url("./RobotoRegular.ttf") format('ttf');
+  font-family: 'RobotoRegular';
+  src: url('./RobotoRegular.ttf') format('ttf');
 }
