--- a/src/components/FWHeader/style.module.scss
+++ b/src/components/FWHeader/style.module.scss
@@ -1,9 +1,11 @@
+@import '@/assets/variables.scss';
+
 header {
-    padding: 10px 0;
+  padding: 10px 0;
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
