--- a/src/components/ui/BaseCardPicture/style.module.scss
+++ b/src/components/ui/BaseCardPicture/style.module.scss
@@ -1,80 +1,76 @@
-@import '@/assets/mixins.scss';
+@import '@/assets/variables.scss';
 
 .cardPicture {
+  width: 100%;
+  background-color: #777777;
+  position: relative;
+  border-radius: 25px;
+  overflow: hidden;
+  padding-top: 73.21%;
+
+  .picture {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    background-color: #777777;
-    position: relative;
-    border-radius: 25px;
-    overflow: hidden;
-    padding-top: 73.21%;
+    height: 100%;
+    object-fit: cover;
+  }
 
-    .picture {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+  .pictureInfo {
+    background-color: rgba(255, 255, 255, 0.75);
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 7px 15px 10px;
+    transform: translateY(60px);
+    transition: all 0.15s ease-out;
+
+    .infoName {
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 20px;
+      color: #000000;
     }
 
-    .pictureInfo {
-        background-color: rgba(255, 255, 255, 0.75);
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        padding: 7px 15px 10px;
-        transform: translateY(60px);
-        transition: all .15s ease-out;
+    .infoText {
+      font-size: 13px;
+      font-weight: 300;
+      line-height: 20px;
+      color: #000000;
+      transition: all 0.15s ease-out;
+      opacity: 0;
 
-        .infoName {
-            font-size: 18px;
-            font-weight: 700;
-            line-height: 20px;
-            color: #000000;
-        }
-
-        .infoText {
-            font-size: 13px;
-            font-weight: 300;
-            line-height: 20px;
-            color: #000000;
-            transition: all .15s ease-out;
-            opacity: 0;
-
-            .infoTitle {
-                font-weight: 600;
-
-            }
-
-
-        }
+      .infoTitle {
+        font-weight: 600;
+      }
     }
+  }
 
-    &:hover .pictureInfo {
-        transform: translateY(0px);
+  &:hover .pictureInfo {
+    transform: translateY(0px);
+  }
 
-    }
-
-    &:hover .infoText {
-        opacity: 1;
-    }
+  &:hover .infoText {
+    opacity: 1;
+  }
 }
 
-@include Tablet{
-    .cardPicture {
-        padding-top: 73.24%;
-    }
+@include Tablet {
+  .cardPicture {
+    padding-top: 73.24%;
+  }
 }
 
-@include Laptop{
-    .cardPicture {
-        padding-top: 76.67%;
-    }
+@include Laptop {
+  .cardPicture {
+    padding-top: 76.67%;
+  }
 }
 
-@include Laptop{
-    .cardPicture {
-        padding-top: 76.39%;
-    }
+@include Laptop {
+  .cardPicture {
+    padding-top: 76.39%;
+  }
 }
