--- a/src/components/ui/BaseSelectDate/style.module.scss
+++ b/src/components/ui/BaseSelectDate/style.module.scss
@@ -32,10 +32,6 @@
       }
     }
 
-    &:focus-visible {
-      outline: var(--text-primary-color auto 1px);
-    }
-
     &:after {
       position: absolute;
       content: '';
@@ -50,10 +46,8 @@
   }
 
   .items {
-    color: var(--text-primary-color);
+    color: var(--accent-color);
     border-radius: 0px 0px 6px 6px;
-    padding-top: 10px;
-    padding-bottom: 10px;
     overflow: auto;
     border-right: 1px solid var(--text-primary-color);
     border-left: 1px solid var(--text-primary-color);
@@ -63,36 +57,33 @@
     left: 0;
     right: 0;
     z-index: 1;
-    max-height: 300px;
+    padding: 15px;
 
-    &::-webkit-scrollbar {
-      width: 25px;
-    }
+    .wrapItems {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 5px;
+      margin: 0 auto;
 
-    &::-webkit-scrollbar-track {
-      background-color: transparent;
-      border-radius: 100px;
-    }
+      .line {
+        width: 12px;
+        height: 1px;
+        background-color: var(--accent-color);
+        flex-shrink: 0;
+      }
 
-    &::-webkit-scrollbar-thumb {
-      background-clip: content-box;
-      border: 8px solid transparent;
-      background-color: var(--accent-color);
-      border-radius: 100px;
-    }
+      @include Tablet {
+        & {
+          flex-direction: column;
+          gap: 10px;
+        }
+      }
 
-    div {
-      color: var(--text-primary-color);
-      padding-left: 1em;
-      cursor: pointer;
-      user-select: none;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      white-space: nowrap;
-
-      &:hover {
-        background-color: var(--text-primary-color);
-        color: var(--background-color-secondary);
+      @include Desktop {
+        & {
+          flex-direction: row;
+        }
       }
     }
   }
@@ -102,42 +93,54 @@
     overflow: hidden;
     white-space: nowrap;
   }
+}
 
-  .buttonClose {
-    border: none;
-    background: transparent;
-    height: 20px;
-    width: 20px;
-    position: relative;
-    cursor: pointer;
-    opacity: 0;
-    flex-shrink: 0;
-    transform: scale(0);
-    transition: all 0.15s ease-out;
+.buttonClose {
+  border: none;
+  background: transparent;
+  height: 20px;
+  width: 20px;
+  position: relative;
+  cursor: pointer;
+  opacity: 0;
+  flex-shrink: 0;
+  transform: scale(0);
+  transition: all 0.15s ease-out;
 
-    &.visible {
-      opacity: 1;
-      transform: scale(1);
-    }
-
-    &:before,
-    &::after {
-      content: '';
-      height: 2px;
-      width: 10px;
-      background-color: var(--accent-color);
-      top: 50%;
-      right: 50%;
-      transform: translate(50%, -50%) rotate(45deg);
-      position: absolute;
-    }
-
-    &::after {
-      transform: translate(50%, -50%) rotate(-45deg);
-    }
+  &.visible {
+    opacity: 1;
+    transform: scale(1);
   }
+
+  &:before,
+  &::after {
+    content: '';
+    height: 2px;
+    width: 10px;
+    background-color: var(--accent-color);
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, -50%) rotate(45deg);
+    position: absolute;
+  }
+
+  &::after {
+    transform: translate(50%, -50%) rotate(-45deg);
+  }
+}
+
+.inputDate {
+  background-color: var(--el-hover);
+  border: none;
 }
 
 .selectHide {
   display: none;
+}
+
+.selectShow {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
 }
