--- a/src/components/ui/BaseCardPicture/style.module.scss
+++ b/src/components/ui/BaseCardPicture/style.module.scss
@@ -22,9 +22,9 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 0;
-    padding: 7px 15px 10px;
-    transform: translateY(60px);
+    top: 100%;
+    padding: 5px 15px 10px;
+    transform: translateY(-30px);
     transition: all 0.15s ease-out;
 
     .infoName {
@@ -32,6 +32,9 @@
       font-weight: 700;
       line-height: 20px;
       color: #000000;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
 
     .infoText {
@@ -48,8 +51,13 @@
     }
   }
 
+  &:hover .infoName {
+    text-overflow: inherit;
+    white-space: wrap;
+  }
+
   &:hover .pictureInfo {
-    transform: translateY(0px);
+    transform: translateY(-100%);
   }
 
   &:hover .infoText {
