--- a/src/components/ui/BasePagination/style.module.scss
+++ b/src/components/ui/BasePagination/style.module.scss
@@ -43,6 +43,7 @@
       border: 1px solid var(--accent-color);
       color: var(--accent-color);
       border-right: none;
+      cursor: not-allowed;
 
       &:hover {
         background-color: transparent;
